fixed SideBar element's weird spacing & slight styling

--- a/client/src/app/results/results.module.css
+++ b/client/src/app/results/results.module.css
@@ -1,4 +1,5 @@
 .results {
+    margin-top: 10px;
     display: grid;
     grid-template-columns: repeat(3, 300px);
     row-gap: 20px;
